@@ -7,4 +7,12 @@ do
   jarpath=$jarpath:$file
 done
 echo "Files in classpath $jarpath"
-java -Xmx1024m -cp "$jarpath" com.tijo.DataSimulator $bin_dir/../ "$@"
+java -server -Xmx2048m \
+-XX:+UseG1GC \
+-XX:+HeapDumpOnOutOfMemoryError \
+-XX:+ExitOnOutOfMemoryError \
+-XX:+PrintGC \
+-XX:HeapDumpPath=/tmp/druid-heap.hprof-cp "$jarpath" com.tijo.DataSimulator $bin_dir/../ "$@" 2>$1 &
+_pid=$!
+echo "$_pid" > $bin_dir/../app.pid
+
